added simple state with underlying fabric name
