# simple_fabrics/openapiv3/eda_oas_simple-fabrics.eda.local_simplefabrics.json
@@ -55,6 +55,11 @@
       "properties": {
         "fabricName": {
           "description": "The name of the backing Fabric that the Simple Fabric created.",
+          "type": "string",
+          "title": "Underlying Fabric Name"
+        },
+        "operationalState": {
+          "description": "Operational state of the Simple Fabric uses the operational state\nof the backing fabric.",
           "type": "string"
         }
       },
